finish part 2 code

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 find_package( OpenCV )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( hw4-1 hw4-1.cpp )
+add_executable( hw4-2 hw4-2.cpp )
 target_link_libraries( hw4-1 ${OpenCV_LIBS} )
+target_link_libraries( hw4-2 ${OpenCV_LIBS} )
